# tokenpatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REMOTE_SETUP.md  SECURITY.md  multi-model-dev-agent-spec.md  pyproject.toml
docs/: API_CONTRACT.md  AUP_TOS_SUMMARY.md  DEMO.md  FAQ.md  GITHUB_PUBLICATION.md  GITHUB_RELEASE_COPY.md  INSTALL.md  INTEGRATIONS.md  MCP_CLIENTS.md  PUBLIC_RELEASE_MANIFEST.md  QUICKSTART.md  RELEASE_CHECKLIST.md  SAVINGS.md  TEST_REPORT.md  TOKENPATCH_MCP_SMOKE_TEST.md  dashboard-overview.example.json  dashboard-overview.openapi-fragment.yaml  dashboard-overview.types.ts
gateway/: README.md
mmdev/: __init__.py  checkpoint.py  claude_install.py  cli.py  codex_install.py  config.py  cost.py  cursor_install.py  doctor.py  executor.py  git_utils.py  isolation.py  json_utils.py  mcp_server.py  memory.py  metrics.py  patch_economics.py  patcher.py  planner.py  reporter.py  reviewer.py  run_events.py  savings_estimator.py  schemas.py  state.py  usage.py  validator.py  web_console.py  workflow.py
scripts/: estimate_savings.py  start_web.ps1  start_web.sh
tests/: test_checkpoint.py  test_claude_install.py  test_cli.py  test_codex_install.py  test_config.py  test_cost.py  test_cursor_install.py  test_deepseek_client.py  test_doctor.py  test_estimate_savings_script.py  test_executor.py  test_fake_demo.py  test_gateway_admin_ops_script.py  test_gateway_client.py  test_gateway_server.py  test_git_utils.py  test_isolation.py  test_mcp_server.py  test_memory.py  test_metrics_command.py  test_metrics_to_prom_script.py  test_patcher.py  (+12 more)
(+38 files in other folders)
