[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpatch"
version = "0.1.0"
description = "TokenPatch local-first multi-model AI coding workflow CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
gateway = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
mmdev = "mmdev.cli:app"
tokenpatch = "mmdev.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
