[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpatch"
version = "0.1.0"
description = "Save AI coding tokens without switching editors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
web = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "uvicorn>=0.30",
]

[project.scripts]
mmdev = "mmdev.cli:app"
tp = "mmdev.cli:app"
tokenpatch = "mmdev.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["mmdev*"]
exclude = ["mmdev_gateway*", "build*"]
where = ["."]

[tool.setuptools.package-data]
mmdev = ["prompts/*.md", "templates/*.html"]
